--- a/chatbot.html
+++ b/chatbot.html
@@ -1,90 +1,69 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>自動応答AI</title>
-    <style>
-        body { font-family: sans-serif; text-align: center; padding: 20px; }
-        .chat-box { width: 90%%; max-width: 600px; margin: auto; }
-        .message { padding: 10px; margin: 5px; border-radius: 5px; }
-        .user { background-color: #e0f7fa; text-align: left; }
-        .bot { background-color: #e8f5e9; text-align: left; }
-    </style>
+  <meta charset="UTF-8">
+  <title>みまくん Chatbot</title>
+  <style>
+    body { font-family: sans-serif; }
+    #chatbox { width: 100%; height: 200px; border: 1px solid #ccc; overflow-y: scroll; margin-bottom: 10px; padding: 10px; }
+    #userInput { width: 80%; }
+  </style>
 </head>
 <body>
-    <h2>自動応答AI</h2>
-    <p>こんにちは。お聞きになりたいことを教えてください。</p>
-    <div class="chat-box" id="chatBox">
-        <div class="message bot">Bot: こんにちは！みまくんが自己紹介しましょうか？</div>
-    </div>
+  <h1>みまくん Chatbot</h1>
+  <div id="chatbox"></div>
+  <input type="text" id="userInput" placeholder="メッセージを入力...">
+  <button onclick="sendMessage()">送信</button>
 
-    <button onclick="startRecognition()">音声認識開始</button><br><br>
-
-    <input type="text" id="userInput" placeholder="メッセージを入力" style="width: 250px;">
-    <button onclick="sendMessage()">送信</button>
-
-<script>
-    const chatBox = document.getElementById("chatBox");
-
-    function appendMessage(text, sender) {
-        const div = document.createElement("div");
-        div.className = "message " + sender;
-        div.innerText = sender === "user" ? "You: " + text : "Bot: " + text;
-        chatBox.appendChild(div);
-        chatBox.scrollTop = chatBox.scrollHeight;
+  <script>
+    function appendMessage(sender, text) {
+      const chatbox = document.getElementById("chatbox");
+      const message = document.createElement("div");
+      message.textContent = sender + ": " + text;
+      chatbox.appendChild(message);
+      chatbox.scrollTop = chatbox.scrollHeight;
     }
 
-    function sendMessage() {
-        const input = document.getElementById("userInput");
-        const message = input.value.trim();
-        if (!message) return;
+    async function sendMessage() {
+      const input = document.getElementById("userInput");
+      const message = input.value;
+      if (!message) return;
 
-        appendMessage(message, "user");
-        input.value = "";
+      appendMessage("あなた", message);
+      input.value = "";
 
-        fetch("https://flask-chatbot2-1.onrender.com/chat", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ message: message })
-        })
-        .then(res => res.json())
-        .then(data => {
-            const reply = data.reply || data.error || "（応答エラー）";
-            appendMessage(reply, "bot");
-            speak(reply);
-        })
-        .catch(err => {
-            appendMessage("（サーバーエラー）", "bot");
-            console.error(err);
+      try {
+        const response = await fetch("/chat", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ text: message })
         });
+
+        const data = await response.json();
+        const reply = data.response_text;
+        appendMessage("みまくん", reply);
+        speak(reply);
+      } catch (error) {
+        console.error("チャット送信エラー:", error);
+      }
     }
 
     function speak(text) {
+      fetch("/speak", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ text: text })
+      })
+      .then(response => response.blob())
+      .then(blob => {
         const audio = new Audio();
-        fetch("https://flask-chatbot2-1.onrender.com/speak", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ text: text })
-        })
-        .then(response => response.blob())
-        .then(blob => {
-            audio.src = URL.createObjectURL(blob);
-            audio.play();
-        })
-        .catch(err => console.error("音声取得エラー:", err));
+        audio.src = URL.createObjectURL(blob);
+        audio.play();
+      })
+      .catch(error => {
+        console.error("音声合成エラー:", error);
+      });
     }
-
-    function startRecognition() {
-        const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-        recognition.lang = "ja-JP";
-        recognition.onresult = function(event) {
-            const transcript = event.results[0][0].transcript;
-            document.getElementById("userInput").value = transcript;
-            sendMessage();
-        };
-        recognition.start();
-    }
-</script>
+  </script>
 </body>
 </html>
