--- a/chatbot.html
+++ b/chatbot.html
@@ -1,49 +1,106 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>AIチャットボット</title>
+  <meta charset="UTF-8">
+  <title>みまくん Chatbot</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background-color: #ffffff;
+      margin: 0;
+      padding: 1rem;
+    }
+    h2 {
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+    #chatLog {
+      border: 1px solid #ccc;
+      padding: 10px;
+      width: 100%;
+      height: 300px;
+      overflow-y: auto;
+      margin-bottom: 10px;
+    }
+    #userInput {
+      width: 60%;
+      padding: 0.5rem;
+      font-size: 1rem;
+    }
+    button {
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      margin-left: 0.5rem;
+    }
+    #buttons {
+      margin-top: 0.5rem;
+    }
+  </style>
 </head>
 <body>
-    <h2>みまくんとお話ししましょう</h2>
-    <form id="speakForm">
-        <label for="text">話しかけてください：</label><br>
-        <textarea id="text" name="text" rows="4" cols="50"></textarea><br>
-        <button type="submit">送信</button>
-    </form>
+  <h2>みまくん Chatbot</h2>
+  <div id="chatLog"></div>
+  <input type="text" id="userInput" placeholder="メッセージを入力...">
+  <div id="buttons">
+    <button onclick="sendMessage()">送信</button>
+    <button onclick="startSpeechRecognition()">🎤 音声入力</button>
+  </div>
+  <audio id="audioPlayer" controls style="display: block; margin-top: 1rem;"></audio>
 
-    <div id="response"></div>
-    <audio id="audioPlayer" controls style="display:none;"></audio>
+  <script>
+    const chatLog = document.getElementById("chatLog");
+    const userInput = document.getElementById("userInput");
+    const audioPlayer = document.getElementById("audioPlayer");
 
-    <script>
-        document.getElementById("speakForm").addEventListener("submit", function (e) {
-            e.preventDefault();
-            const userInput = document.getElementById("text").value;
+    function appendMessage(text, sender) {
+      const p = document.createElement("p");
+      p.innerHTML = `<strong>${sender}:</strong> ${text}`;
+      chatLog.appendChild(p);
+      chatLog.scrollTop = chatLog.scrollHeight;
+    }
 
-            fetch("https://flask-chatbot4.onrender.com/chat", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ text: userInput })
-            })
-            .then(response => response.json())
-            .then(data => {
-                // 🟢 テキスト履歴を追加
-                const responseBox = document.getElementById("response");
-                responseBox.innerHTML += `<p><strong>Bot:</strong> ${data.reply}</p>`;
+    async function sendMessage() {
+      const text = userInput.value.trim();
+      if (!text) return;
 
-                // 🔊 音声ファイルのキャッシュ防止付き再生
-                const audio = document.getElementById("audioPlayer");
-                audio.src = "https://flask-chatbot4.onrender.com/static/output.mp3?t=" + new Date().getTime(); // changed from root ("/static/...) to absolute URL
-                audio.style.display = "block";
-                audio.play();
-            })
-            .catch(error => {
-                console.error("エラー:", error);
-            });
+      appendMessage(text, "あなた");
+      userInput.value = "";
 
-            // 入力欄クリア
-            document.getElementById("text").value = "";
-        });
-    </script>
+      const res = await fetch("https://flask-chatbot4.onrender.com/chat", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ text })
+      });
+
+      if (res.ok) {
+        const data = await res.json();
+        appendMessage(data.reply, "みまくん");
+        audioPlayer.src = `https://flask-chatbot4.onrender.com/static/output.mp3?t=${Date.now()}`;
+        audioPlayer.play();
+      } else {
+        appendMessage("エラーが発生しました。", "みまくん");
+      }
+    }
+
+    function startSpeechRecognition() {
+      const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+      recognition.lang = "ja-JP";
+      recognition.interimResults = false;
+      recognition.maxAlternatives = 1;
+
+      recognition.onresult = (event) => {
+        const transcript = event.results[0][0].transcript;
+        userInput.value = transcript;
+        sendMessage();
+      };
+
+      recognition.onerror = (event) => {
+        alert("音声認識エラー: " + event.error);
+      };
+
+      recognition.start();
+    }
+  </script>
 </body>
 </html>
