--- a/Old_HP/Bup250516/index.html
+++ b/Old_HP/Bup250516/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 
 <html lang="ja">
@@ -329,10 +330,59 @@
 
 </footer>
 
-<!-- チャットボット埋め込み -->
-<div style="position:fixed; bottom:20px; right:20px; z-index:9999;">
-  <iframe src="chatbot.html" width="300" height="400" style="border-radius:8px; border:none; box-shadow:0 4px 8px rgba(0,0,0,0.2);"></iframe>
+
+
+
+<!-- 開閉式チャットボット -->
+<style>
+  #chatbot-container {
+    position: fixed;
+    bottom: 70px;
+    right: 20px;
+    z-index: 9999;
+    display: none;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    padding: 8px;
+  }
+  #chatbot-toggle-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    padding: 10px 16px;
+    border-radius: 24px;
+    background-color: #f8c8dc;
+    color: #333;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  }
+  @media (max-width: 600px) {
+    #chatbot-container iframe {
+      width: 90vw;
+      height: 70vh;
+    }
+  }
+</style>
+
+<div id="chatbot-container">
+  <iframe src="chatbot.html" width="300" height="400" style="border:none; border-radius:8px;"></iframe>
 </div>
+<button id="chatbot-toggle-btn" onclick="toggleChatbot()">チャットする</button>
+
+<script>
+  function toggleChatbot() {
+    const container = document.getElementById("chatbot-container");
+    if (container.style.display === "none") {
+      container.style.display = "block";
+    } else {
+      container.style.display = "none";
+    }
+  }
+</script>
 
 </body>
 </html>
